@@ -4,7 +4,10 @@ devscripts (2.9.4) UNRELEASED; urgency=low
   * bts: fix forwarded command (Closes: #320703)
   * debchange: un-html-ise bug titles when using --closes
 
- -- Julian Gilbey <jdg@debian.org>  Mon,  1 Aug 2005 00:26:01 +0100
+  [ Joey Hess ]
+  * bts: Support new block and unblock commands.
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  2 Aug 2005 13:42:52 -0400
 
 devscripts (2.9.3) unstable; urgency=low
 
